@@ -212,6 +212,13 @@ An arrayref of commands used to install it to the share directory specified by i
 
 Each command may be either a string or an array reference.  If the array reference form is used then the multiple argument form of C<system> is used.  Prior to version 0.009, only the string form was supported.
 
+=item alien_install_type
+
+[version 1.08]
+
+Allows the Build.PL script to set the ALIEN_INSTALL_TYPE variable. Note that if the variable is present,
+it will not be overriden by this value. Possible values are 'system' and 'share'.
+
 =item alien_isolate_dynamic
 
 [version 0.005]
